# fakefiles

./: .gitignore  LICENSE  README.rst  fakefiles.py  pyproject.toml  requirements.txt
configs/finance/: finance.yaml
configs/finance/templates/: bank_accounts.xlsx  expenses.xlsx  sales.xlsx
configs/human_resources/: human_resources.yml
